Alow creating problems manually
